Flicker fix while hiding footer charts

--- a/src/main/resources/static/views/equity_mkt/dialog/graph/css/graph.css
+++ b/src/main/resources/static/views/equity_mkt/dialog/graph/css/graph.css
@@ -49,6 +49,7 @@ input[type="checkbox"] {
 #chartDiv {
 	height: var( --primaryChartHeight ) ;
 	padding: 5px 15px 5px 15px;
+    background-color: var( --canvasBackground ) ;
 }
 
 #eodChartDiv {
@@ -57,6 +58,7 @@ input[type="checkbox"] {
     left: 0px;
     width: var( --chartWidth ) ;
     height: var( --primaryChartHeight ) ;
+    background-color: var( --canvasBackground ) ;
 }
 
 #macdChartDiv {
@@ -66,6 +68,7 @@ input[type="checkbox"] {
     display: none ;
     width: var( --chartWidth ) ;
     height: 125px ;
+    background-color: var( --canvasBackground ) ;
 }
 
 #rsiChartDiv {
@@ -75,6 +78,7 @@ input[type="checkbox"] {
     display: none ;
     width: var( --chartWidth ) ;
     height: 125px ;
+    background-color: var( --canvasBackground ) ;
 }
 
 /* ---------------- Canvas CSS ---------------------------------------------- */
